--- a/css/commons/components/_tourCard.scss
+++ b/css/commons/components/_tourCard.scss
@@ -1,54 +1,82 @@
 .tourCard {
-  background-color: white;
+  background: transparent;
   text-align: center;
-  padding-bottom: 3rem;
-  box-shadow: 0 1rem 1.5rem rgba($color: #000000, $alpha: .2);
+  perspective: 1000px;
   
-  &__header {
+  &__inner {
     position: relative;
-    height: 15rem;
-    margin-bottom: 1rem;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    box-shadow: 0 1rem 1.5rem rgba($color: #000000, $alpha: .2);
 
-    background-size: cover;
-    background-blend-mode: screen;;
-    background-position: center;
-
-    &--summer {
+    &--front {
+      background-color: red;
+    }
+    
+    &--back {
       background-color: orange;
-      background-image: url('../../../images/nat-5.jpg');
+      transform: rotateY(180deg);
     }
-    &--natour {
-      background-color: green;
-      background-image: url('../../../images/nat-6.jpg');
-    }
-    &--sea {
-      background-color: blue;
-      background-image: url('../../../images/nat-7.jpg');
-    }
-
-    &__title {
+    &--front, &--back {
       position: absolute;
-      right: 1rem;
-      bottom: 2.5rem;
-      font-weight: 300;
-      font-size: 1.8rem;
-      text-transform: uppercase;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
     }
-
+    
   }
-  &__detail {
-    margin: 0 auto;
-    list-style: none;
-    width: 60%;
-
-    &__item {
-      font-size: .95rem;
-      padding-top: 1rem;
-      &:not(:last-of-type) {
-        padding-bottom: 1rem;
-        border-bottom: 1px solid rgb(230, 228, 228);
-      }
-    }
+  &:hover &__inner {
+    transform: rotateY(180deg);
   }
+  
+  // &__header {
+  //   position: relative;
+  //   height: 15rem;
+  //   margin-bottom: 1rem;
+  //   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+  //   background-blend-mode: screen;
+  //   background-size: cover;
+  //   background-position: center;
+
+  //   &--summer {
+  //     background-color: orange;
+  //     background-image: url('../../../images/nat-5.jpg');
+  //   }
+  //   &--natour {
+  //     background-color: green;
+  //     background-image: url('../../../images/nat-6.jpg');
+  //   }
+  //   &--sea {
+  //     background-color: blue;
+  //     background-image: url('../../../images/nat-7.jpg');
+  //   }
+
+  //   &__title {
+  //     // position: absolute;
+  //     // right: 1rem;
+  //     // bottom: 2.5rem;
+  //     font-weight: 300;
+  //     font-size: 1.8rem;
+  //     text-transform: uppercase;
+  //   }
+
+  // }
+  // &__detail {
+  //   margin: 0 auto;
+  //   list-style: none;
+  //   width: 70%;
+
+  //   &__item {
+  //     font-size: .95rem;
+  //     padding-top: 1rem;
+  //     &:not(:last-of-type) {
+  //       padding-bottom: 1rem;
+  //       border-bottom: 1px solid rgb(230, 228, 228);
+  //     }
+  //   }
+  // }
 }
