--- a/css/style.css
+++ b/css/style.css
@@ -386,62 +386,47 @@ body {
 }
 
 .tourCard {
-  background-color: white;
+  background: transparent;
   text-align: center;
-  padding-bottom: 3rem;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+.tourCard__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
   -webkit-box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-.tourCard__header {
-  position: relative;
-  height: 15rem;
-  margin-bottom: 1rem;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-  background-size: cover;
-  background-blend-mode: screen;
-  background-position: center;
+.tourCard__inner--front {
+  background-color: red;
 }
 
-.tourCard__header--summer {
+.tourCard__inner--back {
   background-color: orange;
-  background-image: url("../../../images/nat-5.jpg");
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
-.tourCard__header--natour {
-  background-color: green;
-  background-image: url("../../../images/nat-6.jpg");
-}
-
-.tourCard__header--sea {
-  background-color: blue;
-  background-image: url("../../../images/nat-7.jpg");
-}
-
-.tourCard__header__title {
+.tourCard__inner--front, .tourCard__inner--back {
   position: absolute;
-  right: 1rem;
-  bottom: 2.5rem;
-  font-weight: 300;
-  font-size: 1.8rem;
-  text-transform: uppercase;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-.tourCard__detail {
-  margin: 0 auto;
-  list-style: none;
-  width: 60%;
-}
-
-.tourCard__detail__item {
-  font-size: .95rem;
-  padding-top: 1rem;
-}
-
-.tourCard__detail__item:not(:last-of-type) {
-  padding-bottom: 1rem;
-  border-bottom: 1px solid #e6e4e4;
+.tourCard:hover .tourCard__inner {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .row {
